# Projekt_JPO

./: README.md
Projekt/: CMakeLists.txt  DirectoryScanner.cpp  DirectoryScanner.h  FileUtils.cpp  FileUtils.h  GUIApp.cpp  GUIApp.h  GUIApp.qrc  GUIApp.ui  GUIApp.vcxproj  GUIApp.vcxproj.filters  TextAnalyzer.cpp  TextAnalyzer.h  main.cpp
Testy/: Test_FileUtils.cpp  Test_TextAnalyzer.cpp  Testy.sln  Testy.vcxproj  test.cpp
